--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Log In"
+            android:text="@string/log_in"
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_marginTop="40dp"
@@ -19,14 +19,14 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:text="Log in to upload photos and vote!"
+            android:text="@string/log_in_subtitle"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/et_fullname"
-            android:hint="Username"
+            android:hint="@string/username"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
 
         <EditText
             android:id="@+id/et_password"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:layout_marginTop="12dp"
             android:layout_width="match_parent"
@@ -47,14 +47,14 @@
 
         <CheckBox
             android:id="@+id/cb_terms"
-            android:text="I agree with Terms and Conditions"
+            android:text="@string/terms_and_conditions"
             android:layout_marginTop="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_submit"
-            android:text="Log In"
+            android:text="@string/log_in"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
 
         <TextView
             android:id="@+id/tv_login_link"
-            android:text="Need to register? Click here"
+            android:text="@string/register_link_text"
             android:layout_marginTop="16dp"
             android:textColor="@color/primary"
             android:layout_width="wrap_content"
