--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Create Account"
+            android:text="@string/create_account"
             android:textSize="24sp"
             android:textStyle="bold"
             android:layout_marginTop="40dp"
@@ -19,14 +19,14 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:text="Create your account to start participating"
+            android:text="@string/create_your_account_subtitle"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/et_fullname"
-            android:hint="Enter your full name"
+            android:hint="@string/username"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
 
         <EditText
             android:id="@+id/et_email"
-            android:hint="Your email address"
+            android:hint="@string/your_email_address"
             android:inputType="textEmailAddress"
             android:layout_marginTop="12dp"
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
 
         <EditText
             android:id="@+id/et_password"
-            android:hint="Enter your password"
+            android:hint="@string/enter_your_password"
             android:inputType="textPassword"
             android:layout_marginTop="12dp"
             android:layout_width="match_parent"
@@ -58,14 +58,14 @@
 
         <CheckBox
             android:id="@+id/cb_terms"
-            android:text="I agree with Terms and Conditions"
+            android:text="@string/terms_and_conditions"
             android:layout_marginTop="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_submit"
-            android:text="Submit"
+            android:text="@string/register"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -74,7 +74,7 @@
 
         <TextView
             android:id="@+id/tv_login_link"
-            android:text="Already registered? Log In"
+            android:text="@string/log_in_link"
             android:layout_marginTop="16dp"
             android:textColor="@color/primary"
             android:layout_width="wrap_content"
