--- a/app/src/main/res/layout/dialog_manage_contest.xml
+++ b/app/src/main/res/layout/dialog_manage_contest.xml
@@ -1,98 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="24dp"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/inputName"
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/contest_name_hint" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/inputDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/contest_description_hint"
-        android:layout_marginTop="8dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_start_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Start Date">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_start_date"
+        <EditText
+            android:id="@+id/inputName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusable="false"
-            android:clickable="true"
-            android:inputType="date" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/contest_name_hint" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_end_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="End Date"
-        android:layout_marginTop="12dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_end_date"
+        <EditText
+            android:id="@+id/inputDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusable="false"
-            android:clickable="true"
-            android:inputType="date" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/contest_description_hint"
+            android:layout_marginTop="8dp" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_voting_start_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Voting Start Date"
-        android:layout_marginTop="12dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_voting_start_date"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_start_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusable="false"
-            android:clickable="true"
-            android:inputType="date" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/start_date_hint">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/layout_voting_end_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Voting End Date"
-        android:layout_marginTop="12dp">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_start_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="date" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_voting_end_date"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_end_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusable="false"
-            android:clickable="true"
-            android:inputType="date" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/end_date_hint"
+            android:layout_marginTop="12dp">
 
-    <EditText
-        android:id="@+id/maxPhotoPerUserInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Maximun number of photos per user" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_end_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="date" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/buttonSaveContest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/save_user_button"
-        android:layout_marginTop="16dp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_voting_start_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/voting_start_date_hint"
+            android:layout_marginTop="12dp">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_voting_start_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="date" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-</LinearLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layout_voting_end_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/voting_end_date_hint"
+            android:layout_marginTop="12dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input_voting_end_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:clickable="true"
+                android:inputType="date" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <EditText
+            android:id="@+id/maxPhotoPerUserInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/maximun_number_of_photos_per_user_hint" />
+
+        <Button
+            android:id="@+id/buttonSaveContest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save_user_button"
+            android:layout_marginTop="16dp" />
+
+    </LinearLayout>
+</ScrollView>
